<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/article_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:background="@color/White"
	android:layout_marginBottom="@dimen/activity_common_space">
     
    <ImageView 
	  	android:layout_width="100dp"
		android:layout_height="100dp"
		android:src="@drawable/facebook_delete"
		android:scaleType="centerCrop"
		android:contentDescription="@string/top_cover_descr"/>
     
    <LinearLayout
        
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_rare_space">
         
        <TextView 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/top_article_title"/>
         
         <TextView 
		   	android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/article_author"
			android:textColor="@color/ThemeColor"/>
         
         <TextView 
		   	android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/article_date"
			android:textStyle="italic"/>
        
	</LinearLayout>
    
</LinearLayout>